--- a/index.html
+++ b/index.html
@@ -49,12 +49,14 @@
             <div class="product">
                 <img src="./images/img1.jpg" alt="">
                 <h2>Product 1</h2>
+                 <h3>opal</h3>
             </div>
         </div>
         <div class="col-md-4">
             <div class="product">
                 <img src="./images/img2.jpg" alt="">
                 <h2>Product 2</h2>
+                <h3>Amerland</h3>
             </div>
         </div>
         <div class="col-md-4">
