--- a/index.html
+++ b/index.html
@@ -64,10 +64,11 @@
                 <img src="./images/img3.jpg" alt="">
 
                 <h2>Product 3</h2>
+                <h3>gold</h3>
             </div>
         </div>
     </div>
-</div>
+</div> 
 
 <!-- Footer -->
 <div class="footer text-center">
